<resources>
    <string name="app_name">Monthly calendar</string>
    <string name="sign_in">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="exit">Выйти</string>
    <string name="createProfile">Создайте свою учетную запись!</string>
    <string name="signInProfile">Войдите в свою учетную запись!</string>
    <string name="email">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="calendar">Календарь</string>
    <string name="graph">График</string>
    <string name="settings">Настройки</string>

    <string name="title_activity_first">FirstActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_sign_in">SignIn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_list">UserListActivity</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>