<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Activity.MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/firstFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_first" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstFragment">

        <Button
            android:id="@+id/calendar"
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:backgroundTint="@color/red"
            android:fontFamily="monospace"
            android:text="@string/calendar"
            android:textSize="20sp" />

        <Button
            android:id="@+id/graph"
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:backgroundTint="@color/purple"
            android:fontFamily="monospace"
            android:onClick="onClickGraph"
            android:text="@string/graph"
            android:textSize="20sp" />

        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:backgroundTint="@color/pink2"
            android:fontFamily="monospace"
            android:text="@string/settings"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/pink"
        android:text="@string/exit"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>