<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".StartActivity">

    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="55sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="40sp"
        android:fontFamily="monospace">
    </TextView>
    <LinearLayout
        android:layout_below="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="450sp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            android:id="@+id/btn_sign_in"
            android:text="@string/sign_in"
            android:textSize="14sp"
            android:fontFamily="monospace"
            android:textColor="@color/black"
            android:backgroundTint="@color/pink"
            android:layout_marginStart="20sp"
            android:textStyle="bold"
            android:layout_marginEnd="20sp"
            android:layout_weight="1">
        </Button>
        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            android:text="@string/register"
            android:textStyle="bold"
            android:textSize="14sp"
            android:fontFamily="monospace"
            android:layout_marginEnd="20sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/pink"
            android:layout_weight="1">
        </Button>
    </LinearLayout>

</RelativeLayout>